--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/ico+xml" href="/logo.ico" /> <!-- favicon -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- responsive -->
     <title>Icook</title> <!-- title -->
+    <link href="./output.css" rel="stylesheet"> <!-- tailwind css -->
     <script src="https://cdn.tailwindcss.com"></script> <!-- tailwind css -->
   </head>
   <body>
@@ -13,3 +14,5 @@
   </body>
 </html>
  
+
+
